--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -117,7 +117,7 @@
                                                   <% @molto_course.each do |tarea| %>
                                                       <%# debug tarea.id  %>
                                                       <% user.deliveries.each do |tarea_usr| %>
-                                                          <% if tarea.id == tarea_usr.assignment_id && tarea_usr.assignment_id != nil%>
+                                                          <% if tarea.id == tarea_usr.assignment_id %>
                                                               <% if tarea_usr.raiting == nil %>
                                                                   <% @global_deliveries += 0  %>
                                                               <%else%>
@@ -128,23 +128,17 @@
                                                       <% end %>
                                                   <%  end %>
 
-                                                  <% @bella_survey.each do |examen| %>
-                                                      <%user.survey_replies.each do |examen_usr|%>
-
-                                                          <% if examen.id == examen_usr.survey_id && examen_usr.survey_id != nil%>
-                                                              <% if examen_usr.score == nil %>
-                                                                  <% @global_survey += 0  %>
-                                                              <%else%>
-                                                                  <% @global_survey += examen_usr.score > 0 ? examen_usr.score : 0  %>
-                                                              <%end%>
-                                                              <% break %>
-                                                          <% end %>
-                                                      <%end%>
-                                                  <%end%>
+                                                 
 
                                                   <br>
 
-                                              
+                                                  Tareas: <b><%= @operation_deliveries= @global_deliveries/@course.assignments.count %>%</b>
+                                                  Examenes: <b><%= @operation_survey= @global_survey/@course.surveys.count %>%</b>
+                                                  - Calificacion tentativa: <b><%= (@operation_deliveries+@operation_survey)/2 %>%</b>
+                                                  <% @global_deliveries = 0 %>
+                                                  <% @global_survey = 0 %>
+
+
                                             <%else%>
                                                 <%= user.name if user.name !=nil %> = <%= 'Evaluador o administrador del grupo'%>
                                             <%end%>
