--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -116,6 +116,8 @@
                                                 <%= image_tag(user.avatar_file.xsmall.url) if user.avatar_file.xsmall.url != nil %>
                                                   <% @molto_course.each do |tarea| %>
                                                       <%# debug tarea.id  %>
+                                                      <%= if user != nil && user.deliveries != nil %>
+                                                      
                                                       <% user.deliveries.each do |tarea_usr| %>
                                                           <% if tarea.id == tarea_usr.assignment_id %>
                                                               <% if tarea_usr.raiting == nil %>
@@ -126,15 +128,11 @@
                                                               <% break %>
                                                           <% end %>
                                                       <% end %>
+                                                      <% end %>
                                                   <%  end %>
+                                                    
 
                                                  
-
-                                                  <br>
-
-                                                  Tareas: <b><%= @operation_deliveries= @global_deliveries/@course.assignments.count %>%</b>
-                                                  Examenes: <b><%= @operation_survey= @global_survey/@course.surveys.count %>%</b>
-                                                  - Calificacion tentativa: <b><%= (@operation_deliveries+@operation_survey)/2 %>%</b>
                                                   <% @global_deliveries = 0 %>
                                                   <% @global_survey = 0 %>
 
