probando solución de segundo tipo agregando validación extrama

--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -115,7 +115,7 @@
                                             <%if user.role == "student" %>
                                                 <%= image_tag(user.avatar_file.xsmall.url) if user.avatar_file.xsmall.url != nil %>
                                                   <% @molto_course.each do |tarea| %>
-                                                      <%# debug tarea.id  %>
+                                                    <% if user.deliveries != nil %>
                                                       <% user.deliveries.each do |tarea_usr| %>
                                                       <% if  tarea_usr.assignment_id == nil%>
                                                       <%else%>
@@ -130,8 +130,10 @@
                                                          <%end%>
                                                       <% end %>
                                                   <%  end %>
+                                                  <% end %>
 
                                                   <% @bella_survey.each do |examen| %>
+                                                  <% if user.survey_replies != nil %>
                                                       <%user.survey_replies.each do |examen_usr|%>
                                                         <% if examen_usr.survey_id == nil %>
                                                         <%else%>
@@ -145,6 +147,7 @@
                                                           <% end %>
                                                          <% end %>
                                                       <%end%>
+                                                  <%end%>
                                                   <%end%>
 
                                                   <br>
