--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -117,13 +117,14 @@
                                                   <% @molto_course.each do |tarea| %>
                                                     <% if user.deliveries != nil %>
                                                       <% user.deliveries.each do |tarea_usr| %>
+                                                       <% if tarea != nil%>
                                                       <% if  tarea_usr.assignment_id == nil%>
                                                       <%else%>
                                                           <% if tarea.id == tarea_usr.assignment_id %>
                                                               <% if tarea_usr.raiting == nil %>
                                                                   <% @global_deliveries += 0  %>
                                                               <%else%>
-                                                                  <% @global_deliveries += (tarea_usr.score > 0 ? tarea_usr.score : 0) if tarea_usr.raiting > 0 %>
+                                                                  <% @global_deliveries += (tarea_usr.score > 0 ? tarea_usr.score : 0) if tarea_usr.raiting != nil  %>
                                                               <%end%>
                                                               <% break %>
                                                           <% end %>
@@ -131,22 +132,26 @@
                                                       <% end %>
                                                   <%  end %>
                                                   <% end %>
+                                                  <% end %>
 
                                                   <% @bella_survey.each do |examen| %>
+                                                
                                                   <% if user.survey_replies != nil %>
                                                       <%user.survey_replies.each do |examen_usr|%>
+                                                        <% if examen != nil%>
                                                         <% if examen_usr.survey_id == nil %>
                                                         <%else%>
                                                           <% if examen.id == examen_usr.survey_id %>
                                                               <% if examen_usr.score == nil %>
                                                                   <% @global_survey += 0  %>
                                                               <%else%>
-                                                                  <% @global_survey += (examen_usr.score > 0 ? examen_usr.score : 0) if examen_usr.score > 0  %>
+                                                                  <% @global_survey += (examen_usr.score > 0 ? examen_usr.score : 0) if examen_usr.score != nil   %>
                                                               <%end%>
                                                               <% break %>
                                                           <% end %>
                                                          <% end %>
                                                       <%end%>
+                                                  <%end%>
                                                   <%end%>
                                                   <%end%>
 
