--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -115,16 +115,17 @@
                                             <%if user.role == "student" %>
                                                 <%= image_tag(user.avatar_file.xsmall.url) if user.avatar_file.xsmall.url != nil %>
                                                   <% @molto_course.each do |tarea| %>
-                                                    <% if user.deliveries != nil %>
+                                                    <% if user.deliveries == nil %>
+                                                    <%else%>
                                                       <% user.deliveries.each do |tarea_usr| %>
                                                        <% if tarea != nil%>
                                                       <% if  tarea_usr.assignment_id == nil%>
                                                       <%else%>
-                                                          <% if tarea.id == tarea_usr.assignment_id %>
-                                                              <% if tarea_usr.raiting == nil %>
+                                                          <% if tarea.id == tarea_usr.assignment_id && tarea.id !=nil%>
+                                                              <% if tarea_usr.raiting == nil%>
                                                                   <% @global_deliveries += 0  %>
                                                               <%else%>
-                                                                  <% @global_deliveries += (tarea_usr.score > 0 ? tarea_usr.score : 0) if tarea_usr.raiting != nil  %>
+                                                                  <% @global_deliveries += (tarea_usr.score  ? tarea_usr.score : 0) if tarea_usr.raiting != nil  %>
                                                               <%end%>
                                                               <% break %>
                                                           <% end %>
@@ -136,16 +137,17 @@
 
                                                   <% @bella_survey.each do |examen| %>
                                                 
-                                                  <% if user.survey_replies != nil %>
+                                                  <% if user.survey_replies == nil %>
+                                                  <%else%>
                                                       <%user.survey_replies.each do |examen_usr|%>
                                                         <% if examen != nil%>
                                                         <% if examen_usr.survey_id == nil %>
                                                         <%else%>
-                                                          <% if examen.id == examen_usr.survey_id %>
+                                                          <% if examen.id == examen_usr.survey_id && examen.id != nil %>
                                                               <% if examen_usr.score == nil %>
                                                                   <% @global_survey += 0  %>
                                                               <%else%>
-                                                                  <% @global_survey += (examen_usr.score > 0 ? examen_usr.score : 0) if examen_usr.score != nil   %>
+                                                                  <% @global_survey += (examen_usr.score ? examen_usr.score : 0) if examen_usr.score != nil   %>
                                                               <%end%>
                                                               <% break %>
                                                           <% end %>
