--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -125,7 +125,7 @@
                                                               <% if tarea_usr.raiting == nil%>
                                                                   <% @global_deliveries += 0  %>
                                                               <%else%>
-                                                                  <% @global_deliveries += (tarea_usr.score  ? tarea_usr.score : 0) if tarea_usr.raiting != nil  %>
+                                                                  <% @global_deliveries += (tarea_usr.score  ? tarea_usr.score : 0) if tarea_usr.raiting > 0  %>
                                                               <%end%>
                                                               <% break %>
                                                           <% end %>
@@ -147,7 +147,7 @@
                                                               <% if examen_usr.score == nil %>
                                                                   <% @global_survey += 0  %>
                                                               <%else%>
-                                                                  <% @global_survey += (examen_usr.score ? examen_usr.score : 0) if examen_usr.score != nil   %>
+                                                                  <% @global_survey += (examen_usr.score ? examen_usr.score : 0) if examen_usr.score > 0   %>
                                                               <%end%>
                                                               <% break %>
                                                           <% end %>
