subiendo visor de para user_agent

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,8 @@
 	%>
 	<%if user_signed_in? %>
 	<%= render :partial => "notificaciones_admin_actualice/header_notification"%>
+	<% web_browsers_cases %>
+	<%= @d = request.env['HTTP_USER_AGENT']%>
 	<%else%>
 	<%end%>
 	 </div>
