decifrando titulo de versión

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
 	<%= render :partial => "notificaciones_admin_actualice/header_notification"%>
 	<% web_browsers_cases %>
 	<%= @d = request.env['HTTP_USER_AGENT']%>
+	<%= @comparation = browser_active+browser_version %>
 	<%else%>
 	<%end%>
 	 </div>
