subiendo cambios en controllers y en aplications para detect el browser y mostrar mensaje de necesidad de autalización

--- a/app/views/errors/browser_error.html.erb
+++ b/app/views/errors/browser_error.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <center>
-<h2>TU NAVEGADOR NO TIENE LAS CARACTERÍSTICAS NECESARIAS PARA SOPORTAR NUESTRO SERVICIO</h2>
+<h2>PARA BRINDARTE UN MEJOR SERVICIO SELECCIONA OTRO NAVEGADOR</h2>
 <%if browser_active=="Internet Explorer" %>
   <p>La versión de Internet Explorer que estás utilizando, no cumple con los requerimientos básicos para utilizar correctamente Cúrsame, por favor actualiza a la versión más reciente.</p> 
 
